IE fixes and various updates
- Fix layout issues in IE11
- Small housekeeping fixes
- Minor updates for package-lock.json

--- a/src/components/FullScreenHero/fullScreenHero.scss
+++ b/src/components/FullScreenHero/fullScreenHero.scss
@@ -5,8 +5,7 @@
     align-content: center;
     justify-content: center; 
     flex-direction: column;
-    height: auto;
-    min-height: 80vh;
+    height: 80vh;
     padding: 4rem 0 8rem;
     position: relative;
     background: $sc_black; 
